fix: gap above beneficiaries and text of news section

--- a/src/scss/components/_beneficiaries.scss
+++ b/src/scss/components/_beneficiaries.scss
@@ -1,4 +1,5 @@
 .beneficiaries {
+  margin-top: 60px;
   padding-top: 24px;
   padding-bottom: 68px;
   @include media-breakpoint-up(md) {
